feat: Add comprehensive optimization report and performance enhancements for PanGu Drug Model
- Introduced OPTIMIZATION_REPORT.md detailing memory usage, training speed, and model quality improvements.
- Implemented performance optimizations in data processing and analysis pipeline, achieving 3-15x performance improvements.
- Enhanced data standardization module with multiprocessing support and persistent worker pool architecture.
- Improved logging and error handling throughout the data standardization process.
- Added configuration options for optimized performance based on dataset size.
- Updated dependencies for performance optimization packages.
- Included detailed usage instructions and performance validation metrics.

--- a/.gitignore
+++ b/.gitignore
@@ -120,6 +120,8 @@ models/
 /models/*
 !/models/.gitkeep
 /data/processed/*
+/data/standard/
+/data/data_report/*
 !/data/processed/.gitkeep
 /runs/*
 !/runs/.gitkeep
