--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,11 @@ dependencies = [
     "pyyaml>=6.0",
     "matplotlib>=3.8.0",
     "seaborn>=0.13.0",
+    "wandb>=0.16.0",
+    "torch-geometric>=2.6.0",
+    "pybloom-live>=3.0.0",
+    "lz4>=4.0.0",
+    "psutil>=5.9.0",
 ]
 
 [project.optional-dependencies]
